# transdoki

./: .gitignore  CLAUDE.md  billing_architecture_review.md  cabinet-mockup.html  dashboard-mockup.html  dashboard-revenue-block.html  manage.py  project_structure.txt  pyproject.toml  route-builder.jsx  trip-form-redesign.jsx  trip-form-single-page.jsx  trip_list_layout_mockup.html
accounts/: admin.py  context_processors.py  forms.py  middleware.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
bank/: urls.py  views.py
billing/: CLAUDE.md  admin.py  apps.py  cloudpayments.py  constants.py  context_processors.py  exceptions.py  forms.py  mixins.py  models.py  services.py  signals.py  urls.py  views.py
contracts/: admin.py  apps.py  forms.py  models.py  services.py  templates_registry.py  urls.py  views.py
docs/: balance-alert-actionable-brief.md  cabinet-redesign-spec.md  cabinet-team-redesign-brief.md  cabinet-team-redesign-spec.md  cloudpayments.md  cron.md  list-page-standard.md  modal-audit.md  oferta_transdoki.docx  organizations-limit-parity-brief.md  plan_trip_contacts.md  privacy_policy_transdoki.docx  subscription-confirm-modals-brief.md  ui-guide.md  vehicle_mockup.html
documents/: ТН № 1 от 04.03.2026.docx  ТН № 1 от 07.11.2025.docx  ТН № 1 от 13.11.2025.docx
integrations/: models.py
invoicing/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
mockups/: trip_detail_mockup.html
organizations/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
persons/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  validators.py  views.py
static/: CLAUDE.md
templates/: base.html  features.html  pricing.html
tests/: test_tenant_isolation.py
(+406 files in other folders)
