[tool.poetry]
name = "transdoki"
version = "0.1.0"
description = ""
authors = ["Art <a.astakhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
dadata = "^25.10.0"
python-dotenv = "^1.0.0"
docxtpl = "^0.20.1"
flake8 = "^7.3.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

