[tool.poetry]
name = "transdoki"
version = "0.1.0"
description = ""
authors = ["Art <a.astakhin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
dadata = "^25.10.0"
python-dotenv = "^1.0.0"
docxtpl = "^0.20.1"
gunicorn = "^25.1.0"
requests = "^2.32.5"
django-cryptography-5 = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
force-exclude = true
exclude = [
  "migrations",
  ".venv",
  "venv",
  "build",
  "dist",
  "templates",
]
extend-exclude = [
  "**/*.html",
  "**/*.htm",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"